objects/Business_Rules__c.object
<CustomObject>
    <description>This is the object which is going to use In COB for Country related business rules.</description>
    <fields>
        <fullName>CDR_Request_Status__c</fullName>
        <description>Status of the Customer Onboarding Request.This is Read only field.</description>
        <label>CDR Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Credit Approval</fullName>
                </value>
                <value>
                    <fullName>Awaiting Data Analyst (DMS Team) Approval</fullName>
                </value>
                <value>
                    <fullName>Awaiting Destination Credit Approval</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Draft/Data Gathering</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Request Completed in SAP</fullName>
                </value>
                <value>
                    <fullName>Request Sent for Re-Work</fullName>
                </value>
                <value>
                    <fullName>Awaiting DOA approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Analyst_Notification_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The named individual from the country credit queue who receives the request from CSR.</description>
        <label>Credit Analyst Notification Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Rules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Lower__c</fullName>
        <description>Credit Limit Upper</description>
        <label>Credit Limit Lower</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Upper__c</fullName>
        <description>doa credit limit upper</description>
        <label>Credit Limit Upper</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination_Queue__c</fullName>
        <description>Destination Queue for the request</description>
        <label>Destination Queue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The approver for DOA process</description>
        <label>Escalated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Selling_Company_Code__c</fullName>
        <description>Selling company code of the business</description>
        <label>Selling Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0003 - E.I. DuPont India Private Limited</fullName>
                </value>
                <value>
                    <fullName>0029 - DU PONT CHINA LIMITED</fullName>
                </value>
                <value>
                    <fullName>0078 - ELECT. MATLS DUP DONGGUAN</fullName>
                </value>
                <value>
                    <fullName>0218 - DuPont Trading Shanghai</fullName>
                </value>
                <value>
                    <fullName>0701 - DUP AGRIC CHEM LTD</fullName>
                </value>
                <value>
                    <fullName>1131 - DuPont (Shanghai) Sourcing Center Company, Ltd.</fullName>
                </value>
                <value>
                    <fullName>1132 - DuPont(China) RD and Mgmt</fullName>
                </value>
                <value>
                    <fullName>1142 - DUP SURFCE GUANGZHOU</fullName>
                </value>
                <value>
                    <fullName>1210 - DUP (SHENZHEN) INDUS</fullName>
                </value>
                <value>
                    <fullName>2791 - Du Pont China Holding Co.</fullName>
                </value>
                <value>
                    <fullName>4860 - DUP (Thailand) Ltd</fullName>
                </value>
                <value>
                    <fullName>0078 – Electronic Materials DuPont Dongguan Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>1449 - DuPont (Shanghai) Electronic Materials Co. Ltd.</fullName>
                </value>
                <value>
                    <fullName>1309 - DuPont (Hong Kong) Electronic Materials Limited</fullName>
                </value>
                <value>
                    <fullName>0443 - DuPont (New Zealand) Ltd.</fullName>
                </value>
                <value>
                    <fullName>2380 - Dup Austl Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>3874 - Du Pont Co. (Singapore) Pte</fullName>
                </value>
                <value>
                    <fullName>3940 - DUP MALAYSIA</fullName>
                </value>
                <value>
                    <fullName>3945 - DUFE Philippines</fullName>
                </value>
                <value>
                    <fullName>0514 - DuPont Vietnam Ltd.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_to_Country__c</fullName>
        <description>Sold to country</description>
        <label>Sold-to Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CN - China</fullName>
                </value>
                <value>
                    <fullName>HK - Hong Kong</fullName>
                </value>
                <value>
                    <fullName>IN - India</fullName>
                </value>
                <value>
                    <fullName>TH - Thailand</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>AU - Australia</fullName>
                </value>
                <value>
                    <fullName>NZ - New Zealand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Business__c</fullName>
        <description>Sub business for DOA implementation</description>
        <label>Sub – Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>CPM(HPF)</fullName>
                </value>
                <value>
                    <fullName>CPM(HPL)</fullName>
                </value>
                <value>
                    <fullName>CPM(PCM)</fullName>
                </value>
                <value>
                    <fullName>CROP PROTECTION</fullName>
                </value>
                <value>
                    <fullName>DCP</fullName>
                </value>
                <value>
                    <fullName>DPP</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>E&amp;C(DAS)</fullName>
                </value>
                <value>
                    <fullName>E&amp;C(DE)</fullName>
                </value>
                <value>
                    <fullName>E&amp;C(DP)</fullName>
                </value>
                <value>
                    <fullName>E&amp;C(GR)</fullName>
                </value>
                <value>
                    <fullName>E&amp;C(MCM)</fullName>
                </value>
                <value>
                    <fullName>E&amp;C(PG)</fullName>
                </value>
                <value>
                    <fullName>E&amp;C(PVFM)</fullName>
                </value>
                <value>
                    <fullName>E&amp;C(SFM)</fullName>
                </value>
                <value>
                    <fullName>N&amp;H(QUALICON)</fullName>
                </value>
                <value>
                    <fullName>P&amp;IP(AI)</fullName>
                </value>
                <value>
                    <fullName>P&amp;IP(ECC)</fullName>
                </value>
                <value>
                    <fullName>P&amp;IP(ECS)</fullName>
                </value>
                <value>
                    <fullName>SUS SOLUTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Rules</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CDR_Request_Status__c</columns>
        <columns>Credit_Analyst_Notification_Mgr__c</columns>
        <columns>Credit_Limit_Lower__c</columns>
        <columns>Credit_Limit_Upper__c</columns>
        <columns>Destination_Queue__c</columns>
        <columns>Escalated_Approver__c</columns>
        <columns>Selling_Company_Code__c</columns>
        <columns>Sold_to_Country__c</columns>
        <columns>Sub_Business__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Country_Based_Rules</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CDR_Request_Status__c</columns>
        <columns>Destination_Queue__c</columns>
        <columns>Selling_Company_Code__c</columns>
        <columns>Sold_to_Country__c</columns>
        <columns>Credit_Limit_Upper__c</columns>
        <columns>Credit_Limit_Lower__c</columns>
        <columns>Credit_Analyst_Notification_Mgr__c</columns>
        <columns>Escalated_Approver__c</columns>
        <columns>Sub_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CBR</value>
        </filters>
        <label>Country Based Rules</label>
    </listViews>
    <listViews>
        <fullName>Country_Selling_Company_Code_Rules</fullName>
        <columns>NAME</columns>
        <columns>Selling_Company_Code__c</columns>
        <columns>Sold_to_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CSCCR</value>
        </filters>
        <label>Country Selling Company Code Rules</label>
    </listViews>
    <listViews>
        <fullName>Credit_Analyst_Notification</fullName>
        <columns>NAME</columns>
        <columns>CDR_Request_Status__c</columns>
        <columns>Credit_Analyst_Notification_Mgr__c</columns>
        <columns>Selling_Company_Code__c</columns>
        <columns>Sub_Business__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Credit_Limit_Lower__c</columns>
        <columns>Escalated_Approver__c</columns>
        <columns>Destination_Queue__c</columns>
        <columns>Credit_Limit_Upper__c</columns>
        <columns>Sold_to_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Rules__c.Country_Credit_Analyst_Notification</value>
        </filters>
        <label>Credit Analyst Notification</label>
    </listViews>
    <listViews>
        <fullName>DOA_Rules</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CDR_Request_Status__c</columns>
        <columns>Credit_Limit_Lower__c</columns>
        <columns>Credit_Limit_Upper__c</columns>
        <columns>Destination_Queue__c</columns>
        <columns>Escalated_Approver__c</columns>
        <columns>Selling_Company_Code__c</columns>
        <columns>Sub_Business__c</columns>
        <columns>Credit_Analyst_Notification_Mgr__c</columns>
        <columns>Sold_to_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>DOA</value>
        </filters>
        <label>DOA Rules</label>
    </listViews>
    <listViews>
        <fullName>DOA_Rules_CN</fullName>
        <columns>NAME</columns>
        <columns>CDR_Request_Status__c</columns>
        <columns>Credit_Analyst_Notification_Mgr__c</columns>
        <columns>Credit_Limit_Lower__c</columns>
        <columns>Credit_Limit_Upper__c</columns>
        <columns>Destination_Queue__c</columns>
        <columns>Escalated_Approver__c</columns>
        <columns>Selling_Company_Code__c</columns>
        <columns>Sold_to_Country__c</columns>
        <columns>Sub_Business__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>DOACN</value>
        </filters>
        <label>DOA Rules - CN</label>
    </listViews>
    <listViews>
        <fullName>DOA_Rules_HK</fullName>
        <columns>NAME</columns>
        <columns>CDR_Request_Status__c</columns>
        <columns>Credit_Analyst_Notification_Mgr__c</columns>
        <columns>Credit_Limit_Lower__c</columns>
        <columns>Credit_Limit_Upper__c</columns>
        <columns>Destination_Queue__c</columns>
        <columns>Escalated_Approver__c</columns>
        <columns>Selling_Company_Code__c</columns>
        <columns>Sold_to_Country__c</columns>
        <columns>Sub_Business__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>DOAHK</value>
        </filters>
        <label>DOA Rules - HK</label>
    </listViews>
    <listViews>
        <fullName>DOA_Rules_India</fullName>
        <columns>NAME</columns>
        <columns>CDR_Request_Status__c</columns>
        <columns>Credit_Analyst_Notification_Mgr__c</columns>
        <columns>Credit_Limit_Lower__c</columns>
        <columns>Credit_Limit_Upper__c</columns>
        <columns>Destination_Queue__c</columns>
        <columns>Escalated_Approver__c</columns>
        <columns>Selling_Company_Code__c</columns>
        <columns>Sold_to_Country__c</columns>
        <columns>Sub_Business__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>DOAIN</value>
        </filters>
        <label>DOA Rules - India</label>
    </listViews>
    <listViews>
        <fullName>DOA_Rules_Thailand</fullName>
        <columns>NAME</columns>
        <columns>CDR_Request_Status__c</columns>
        <columns>Credit_Limit_Lower__c</columns>
        <columns>Credit_Limit_Upper__c</columns>
        <columns>Destination_Queue__c</columns>
        <columns>Escalated_Approver__c</columns>
        <columns>Selling_Company_Code__c</columns>
        <columns>Sub_Business__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Sold_to_Country__c</columns>
        <columns>Credit_Analyst_Notification_Mgr__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>DOATH</value>
        </filters>
        <label>DOA Rules - Thailand</label>
    </listViews>
    <listViews>
        <fullName>Notification_Rules</fullName>
        <columns>NAME</columns>
        <columns>CDR_Request_Status__c</columns>
        <columns>Credit_Analyst_Notification_Mgr__c</columns>
        <columns>Credit_Limit_Lower__c</columns>
        <columns>Credit_Limit_Upper__c</columns>
        <columns>Destination_Queue__c</columns>
        <columns>Escalated_Approver__c</columns>
        <columns>Selling_Company_Code__c</columns>
        <columns>Sold_to_Country__c</columns>
        <columns>Sub_Business__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Rules__c.Notification_Rules</value>
        </filters>
        <label>Notification Rules</label>
    </listViews>
    <nameField>
        <label>Business Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Rules</pluralLabel>
    <recordTypes>
        <fullName>Country_Credit_Analyst_Notification</fullName>
        <active>true</active>
        <description>Record type documenting rules to direct the request to a named individual from the country credit queue</description>
        <label>Country Credit Analyst Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_Rules_Record</fullName>
        <active>true</active>
        <description>Record of country rules</description>
        <label>Country Rules Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_Selling_Company_Code_Rules</fullName>
        <active>true</active>
        <description>Maps the country with the selling company code</description>
        <label>Country Selling Company Code Rules</label>
    </recordTypes>
    <recordTypes>
        <fullName>DOA_Rules</fullName>
        <active>true</active>
        <description>Rules which have DOA Fields</description>
        <label>DOA Rules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Notification_Rules</fullName>
        <active>true</active>
        <description>Rules to send notifications to dupont managers</description>
        <label>Notification Rules</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>